@@ -307,7 +307,7 @@ public class ObjLoader extends ModelLoader<ObjLoader.ObjLoaderParameters> {
 			return idx - 1;
 	}
 
-	private class Group {
+	private static class Group {
 		final String name;
 		String materialName;
 		Array<Integer> faces;
@@ -333,12 +333,8 @@ class MtlLoader {
 	public void load (FileHandle file) {
 		String line;
 		String[] tokens;
-		String curMatName = "default";
-		Color difcolor = Color.WHITE;
-		Color speccolor = Color.WHITE;
-		float opacity = 1.f;
-		float shininess = 0.f;
-		String texFilename = null;
+
+		ObjMaterial currentMaterial = new ObjMaterial();
 
 		if (file == null || !file.exists()) return;
 
@@ -357,52 +353,37 @@ class MtlLoader {
 				else {
 					final String key = tokens[0].toLowerCase();
 					if (key.equals("newmtl")) {
-						ModelMaterial mat = new ModelMaterial();
-						mat.id = curMatName;
-						mat.diffuse = new Color(difcolor);
-						mat.specular = new Color(speccolor);
-						mat.opacity = opacity;
-						mat.shininess = shininess;
-						if (texFilename != null) {
-							ModelTexture tex = new ModelTexture();
-							tex.usage = ModelTexture.USAGE_DIFFUSE;
-							tex.fileName = new String(texFilename);
-							if (mat.textures == null) mat.textures = new Array<ModelTexture>(1);
-							mat.textures.add(tex);
-						}
+						ModelMaterial mat = currentMaterial.build();
 						materials.add(mat);
 
 						if (tokens.length > 1) {
-							curMatName = tokens[1];
-							curMatName = curMatName.replace('.', '_');
-						} else
-							curMatName = "default";
-
-						difcolor = Color.WHITE;
-						speccolor = Color.WHITE;
-						opacity = 1.f;
-						shininess = 0.f;
-					} else if (key.equals("kd") || key.equals("ks")) // diffuse or specular
-					{
-						float r = Float.parseFloat(tokens[1]);
-						float g = Float.parseFloat(tokens[2]);
-						float b = Float.parseFloat(tokens[3]);
-						float a = 1;
-						if (tokens.length > 4) a = Float.parseFloat(tokens[4]);
-
-						if (tokens[0].toLowerCase().equals("kd")) {
-							difcolor = new Color();
-							difcolor.set(r, g, b, a);
+							currentMaterial.materialName = tokens[1];
+							currentMaterial.materialName = currentMaterial.materialName.replace('.', '_');
 						} else {
-							speccolor = new Color();
-							speccolor.set(r, g, b, a);
+							currentMaterial.materialName = "default";
 						}
+
+						currentMaterial.reset();
+					} else if (key.equals("ka")) {
+						currentMaterial.ambientColor = parseColor(tokens);
+					} else if (key.equals("kd")) {
+						currentMaterial.diffuseColor = parseColor(tokens);
+					} else if (key.equals("ks")) {
+						currentMaterial.specularColor = parseColor(tokens);
 					} else if (key.equals("tr") || key.equals("d")) {
-						opacity = Float.parseFloat(tokens[1]);
+						currentMaterial.opacity = Float.parseFloat(tokens[1]);
 					} else if (key.equals("ns")) {
-						shininess = Float.parseFloat(tokens[1]);
+						currentMaterial.shininess = Float.parseFloat(tokens[1]);
+					} else if (key.equals("map_d")) {
+						currentMaterial.alphaTexFilename = file.parent().child(tokens[1]).path();
+					} else if (key.equals("map_ka")) {
+						currentMaterial.ambientTexFilename = file.parent().child(tokens[1]).path();
 					} else if (key.equals("map_kd")) {
-						texFilename = file.parent().child(tokens[1]).path();
+						currentMaterial.diffuseTexFilename = file.parent().child(tokens[1]).path();
+					} else if (key.equals("map_ks")) {
+						currentMaterial.specularTexFilename = file.parent().child(tokens[1]).path();
+					} else if (key.equals("map_ns")) {
+						currentMaterial.shininessTexFilename = file.parent().child(tokens[1]).path();
 					}
 				}
 			}
@@ -412,22 +393,22 @@ class MtlLoader {
 		}
 
 		// last material
-		ModelMaterial mat = new ModelMaterial();
-		mat.id = curMatName;
-		mat.diffuse = new Color(difcolor);
-		mat.specular = new Color(speccolor);
-		mat.opacity = opacity;
-		mat.shininess = shininess;
-		if (texFilename != null) {
-			ModelTexture tex = new ModelTexture();
-			tex.usage = ModelTexture.USAGE_DIFFUSE;
-			tex.fileName = new String(texFilename);
-			if (mat.textures == null) mat.textures = new Array<ModelTexture>(1);
-			mat.textures.add(tex);
-		}
+		ModelMaterial mat = currentMaterial.build();
 		materials.add(mat);
 
 		return;
+	}
+
+	private Color parseColor (String[] tokens) {
+		float r = Float.parseFloat(tokens[1]);
+		float g = Float.parseFloat(tokens[2]);
+		float b = Float.parseFloat(tokens[3]);
+		float a = 1;
+		if (tokens.length > 4) {
+			a = Float.parseFloat(tokens[4]);
+		}
+
+		return new Color(r,g,b,a);
 	}
 
 	public ModelMaterial getMaterial (final String name) {
@@ -438,5 +419,63 @@ class MtlLoader {
 		mat.diffuse = new Color(Color.WHITE);
 		materials.add(mat);
 		return mat;
+	}
+
+	private static class ObjMaterial {
+		String materialName = "default";
+		Color ambientColor;
+		Color diffuseColor;
+		Color specularColor;
+		float opacity;
+		float shininess;
+		String alphaTexFilename;
+		String ambientTexFilename;
+		String diffuseTexFilename;
+		String shininessTexFilename;
+		String specularTexFilename;
+
+		public ObjMaterial() {
+			reset();
+		}
+
+		public ModelMaterial build () {
+			ModelMaterial mat = new ModelMaterial();
+			mat.id = materialName;
+			mat.ambient = ambientColor == null ? null : new Color(ambientColor);
+			mat.diffuse = new Color(diffuseColor);
+			mat.specular = new Color(specularColor);
+			mat.opacity = opacity;
+			mat.shininess = shininess;
+			addTexture(mat, alphaTexFilename, ModelTexture.USAGE_TRANSPARENCY);
+			addTexture(mat, ambientTexFilename, ModelTexture.USAGE_AMBIENT);
+			addTexture(mat, diffuseTexFilename, ModelTexture.USAGE_DIFFUSE);
+			addTexture(mat, specularTexFilename, ModelTexture.USAGE_SPECULAR);
+			addTexture(mat, shininessTexFilename, ModelTexture.USAGE_SHININESS);
+
+			return mat;
+		}
+
+		private void addTexture (ModelMaterial mat, String texFilename, int usage) {
+			if (texFilename != null) {
+				ModelTexture tex = new ModelTexture();
+				tex.usage = usage;
+				tex.fileName = texFilename;
+				if (mat.textures == null) mat.textures = new Array<ModelTexture>(1);
+				mat.textures.add(tex);
+			}
+		}
+
+		public void reset () {
+			ambientColor = null;
+			diffuseColor = Color.WHITE;
+			specularColor = Color.WHITE;
+			opacity = 1.f;
+			shininess = 0.f;
+			alphaTexFilename = null;
+			ambientTexFilename = null;
+			diffuseTexFilename = null;
+			shininessTexFilename = null;
+			specularTexFilename = null;
+		}
 	}
 }
